# torchscript-examples

./: .gitignore  README.md  dicts.py
dict_custom_op/: CMakeLists.txt  op.cpp  use_custom_op.py
values/: CMakeLists.txt  README.md  ivalues.cpp  model.pt  module.py
